--- a/lab-09_3_mnist_nn_xavier.ipynb
+++ b/lab-09_3_mnist_nn_xavier.ipynb
@@ -145,21 +145,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 cost = 0.249897048\n",
-      "Epoch: 0002 cost = 0.094330102\n",
-      "Epoch: 0003 cost = 0.061055195\n",
-      "Epoch: 0004 cost = 0.042816643\n",
-      "Epoch: 0005 cost = 0.032796543\n",
-      "Epoch: 0006 cost = 0.024419624\n",
-      "Epoch: 0007 cost = 0.020511184\n",
-      "Epoch: 0008 cost = 0.018132176\n",
-      "Epoch: 0009 cost = 0.015536907\n",
-      "Epoch: 0010 cost = 0.016846467\n",
-      "Epoch: 0011 cost = 0.012203062\n",
-      "Epoch: 0012 cost = 0.012871196\n",
-      "Epoch: 0013 cost = 0.011348661\n",
-      "Epoch: 0014 cost = 0.010990168\n",
-      "Epoch: 0015 cost = 0.006201488\n",
+      "Epoch: 0001 cost = 0.250022203\n",
+      "Epoch: 0002 cost = 0.094261840\n",
+      "Epoch: 0003 cost = 0.060961064\n",
+      "Epoch: 0004 cost = 0.044210818\n",
+      "Epoch: 0005 cost = 0.033159792\n",
+      "Epoch: 0006 cost = 0.024475569\n",
+      "Epoch: 0007 cost = 0.020928090\n",
+      "Epoch: 0008 cost = 0.019800017\n",
+      "Epoch: 0009 cost = 0.015587106\n",
+      "Epoch: 0010 cost = 0.013609046\n",
+      "Epoch: 0011 cost = 0.012526563\n",
+      "Epoch: 0012 cost = 0.013122426\n",
+      "Epoch: 0013 cost = 0.007857139\n",
+      "Epoch: 0014 cost = 0.011607411\n",
+      "Epoch: 0015 cost = 0.010181752\n",
       "Learning finished\n"
      ]
     }
@@ -197,9 +197,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9804999828338623\n",
+      "Accuracy: 0.9781000018119812\n",
       "Label:  8\n",
       "Prediction:  8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/torchvision/datasets/mnist.py:58: UserWarning: test_data has been renamed data\n",
+      "  warnings.warn(\"test_data has been renamed data\")\n",
+      "/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/torchvision/datasets/mnist.py:48: UserWarning: test_labels has been renamed targets\n",
+      "  warnings.warn(\"test_labels has been renamed targets\")\n"
      ]
     }
    ],
@@ -223,6 +233,13 @@
     "    single_prediction = model(X_single_data)\n",
     "    print('Prediction: ', torch.argmax(single_prediction, 1).item())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -241,9 +258,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
