--- a/lab-09_5_mnist_nn_dropout.ipynb
+++ b/lab-09_5_mnist_nn_dropout.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dropout을 적용하는 코드"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +36,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dropout 확률 선언\n",
+    "\n",
+    "- drop_prob = 0.3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,8 +89,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dropout 선언\n",
+    "\n",
+    "- dropout = torch.nn.Dropout(p=drop_prob)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,6 +147,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dropout을 모델에 넣어줌\n",
+    "\n",
+    "- model = torch.nn.Sequential(linear1, relu, dropout,"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -144,6 +178,15 @@
     "# define cost/loss & optimizer\n",
     "criterion = torch.nn.CrossEntropyLoss().to(device)    # Softmax is internally computed.\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 학습시 Dropout을 적용\n",
+    "\n",
+    "- model.train()    # set the model to train mode (dropout=True)"
    ]
   },
   {
@@ -197,6 +240,15 @@
     "    print('Epoch:', '%04d' % (epoch + 1), 'cost =', '{:.9f}'.format(avg_cost))\n",
     "\n",
     "print('Learning finished')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 평가할때는 Dropout 적용 안함\n",
+    "\n",
+    "- model.eval()    # set the model to evaluation mode (dropout=False)"
    ]
   },
   {
