--- a/lab-09_4_mnist_nn_deep.ipynb
+++ b/lab-09_4_mnist_nn_deep.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 각 레이어의 Weight를 초기화 하는 방법\n",
+    "- Xavier\n",
+    "- He"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
