--- a/lab-11_6_PackedSequence.ipynb
+++ b/lab-11_6_PackedSequence.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,16 +47,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {
-    "scrolled": true
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
+   "outputs": [],
+   "source": [
+    "data = ['hello world', 'midnight', 'calculation', 'path', 'short circuit']\n",
+    "char_set = ['<pad'] + list(set(char for seq in data for char in seq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "char_set: ['<pad>', 'h', 'm', 't', ' ', 'c', 'n', 'r', 'e', 'i', 'o', 'w', 'd', 'g', 'a', 's', 'p', 'l', 'u']\n",
+      "char_set: ['<pad>', 'h', 'c', 't', 'g', 'm', 'e', 'p', 'l', 'w', 'd', 'n', 'i', 'u', ' ', 's', 'o', 'a', 'r']\n",
       "char_set length: 19\n"
      ]
     }
@@ -78,18 +90,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 1,  8, 17, 17, 10,  4, 11, 10,  7, 17, 12])\n",
-      "tensor([ 2,  9, 12,  6,  9, 13,  1,  3])\n",
-      "tensor([ 5, 14, 17,  5, 18, 17, 14,  3,  9, 10,  6])\n",
-      "tensor([16, 14,  3,  1])\n",
-      "tensor([15,  1, 10,  7,  3,  4,  5,  9,  7,  5, 18,  9,  3])\n"
+      "char_set: ['<pad>', 'h', 'c', 't', 'g', 'm', 'e', 'p', 'l', 'w', 'd', 'n', 'i', 'u', ' ', 's', 'o', 'a', 'r']\n",
+      "char_set length: 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Random word from random word generator\n",
+    "data = ['hello world',\n",
+    "        'midnight',\n",
+    "        'calculation',\n",
+    "        'path',\n",
+    "        'short circuit']\n",
+    "\n",
+    "# Make dictionary\n",
+    "char_set = ['<pad>'] + list(set(char for seq in data for char in seq)) # Get all characters and include pad token\n",
+    "char2idx = {char: idx for idx, char in enumerate(char_set)} # Constuct character to index dictionary\n",
+    "print('char_set:', char_set)\n",
+    "print('char_set length:', len(char_set))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 1,  6,  8,  8, 16, 14,  9, 16, 18,  8, 10])\n",
+      "tensor([ 5, 12, 10, 11, 12,  4,  1,  3])\n",
+      "tensor([ 2, 17,  8,  2, 13,  8, 17,  3, 12, 16, 11])\n",
+      "tensor([ 7, 17,  3,  1])\n",
+      "tensor([15,  1, 16, 18,  3, 14,  2, 12, 18,  2, 13, 12,  3])\n"
      ]
     }
    ],
@@ -104,15 +151,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "다음과 같이 sequence의 길이가 제각각인 것을 확인하실 수 있습니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 51,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -144,7 +199,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# `pad_sequence` 함수를 이용하여 PaddedSequence (그냥 Tensor) 만들기\n",
     "\n",
@@ -170,18 +229,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 56,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 1,  8, 17, 17, 10,  4, 11, 10,  7, 17, 12,  0,  0],\n",
-      "        [ 2,  9, 12,  6,  9, 13,  1,  3,  0,  0,  0,  0,  0],\n",
-      "        [ 5, 14, 17,  5, 18, 17, 14,  3,  9, 10,  6,  0,  0],\n",
-      "        [16, 14,  3,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-      "        [15,  1, 10,  7,  3,  4,  5,  9,  7,  5, 18,  9,  3]])\n",
+      "tensor([[ 1,  6,  8,  8, 16, 14,  9, 16, 18,  8, 10,  0,  0],\n",
+      "        [ 5, 12, 10, 11, 12,  4,  1,  3,  0,  0,  0,  0,  0],\n",
+      "        [ 2, 17,  8,  2, 13,  8, 17,  3, 12, 16, 11,  0,  0],\n",
+      "        [ 7, 17,  3,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+      "        [15,  1, 16, 18,  3, 14,  2, 12, 18,  2, 13, 12,  3]])\n",
       "torch.Size([5, 13])\n"
      ]
     }
@@ -195,7 +258,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# `pack_sequence` 함수를 이용하여 PackedSequence 만들기\n",
     "\n",
@@ -211,18 +278,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 69,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([15,  1, 10,  7,  3,  4,  5,  9,  7,  5, 18,  9,  3])\n",
-      "tensor([ 1,  8, 17, 17, 10,  4, 11, 10,  7, 17, 12])\n",
-      "tensor([ 5, 14, 17,  5, 18, 17, 14,  3,  9, 10,  6])\n",
-      "tensor([ 2,  9, 12,  6,  9, 13,  1,  3])\n",
-      "tensor([16, 14,  3,  1])\n"
+      "tensor([15,  1, 16, 18,  3, 14,  2, 12, 18,  2, 13, 12,  3])\n",
+      "tensor([ 1,  6,  8,  8, 16, 14,  9, 16, 18,  8, 10])\n",
+      "tensor([ 2, 17,  8,  2, 13,  8, 17,  3, 12, 16, 11])\n",
+      "tensor([ 5, 12, 10, 11, 12,  4,  1,  3])\n",
+      "tensor([ 7, 17,  3,  1])\n"
      ]
     }
    ],
@@ -238,23 +309,31 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "자, 이제 input Tensor가 정렬되었으니 `pack_sequence`를 이용하여 PackedSequence를 만들어보겠습니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 74,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PackedSequence(data=tensor([15,  1,  5,  2, 16,  1,  8, 14,  9, 14, 10, 17, 17, 12,  3,  7, 17,  5,\n",
-      "         6,  1,  3, 10, 18,  9,  4,  4, 17, 13,  5, 11, 14,  1,  9, 10,  3,  3,\n",
-      "         7,  7,  9,  5, 17, 10, 18, 12,  6,  9,  3]), batch_sizes=tensor([5, 5, 5, 5, 4, 4, 4, 4, 3, 3, 3, 1, 1]), sorted_indices=None, unsorted_indices=None)\n"
+      "PackedSequence(data=tensor([15,  1,  2,  5,  7,  1,  6, 17, 12, 17, 16,  8,  8, 10,  3, 18,  8,  2,\n",
+      "        11,  1,  3, 16, 13, 12, 14, 14,  8,  4,  2,  9, 17,  1, 12, 16,  3,  3,\n",
+      "        18, 18, 12,  2,  8, 16, 13, 10, 11, 12,  3]), batch_sizes=tensor([5, 5, 5, 5, 4, 4, 4, 4, 3, 3, 3, 1, 1]), sorted_indices=None, unsorted_indices=None)\n"
      ]
     }
    ],
@@ -265,7 +344,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Embedding 적용해보기\n",
     "자 이제, `PackedSequence`와 padding이 된 Tensor인 `PaddedSequence`를 만들어보았으니, RNN에 input으로 넣어서 테스트해보려고 합니다.\n",
@@ -277,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -297,8 +380,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 102,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -316,7 +403,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# RNN 모델 만들기\n",
     "간단한 RNN 모델을 한번 만들어봅시다."
@@ -325,7 +416,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# declare RNN\n",
@@ -334,15 +429,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "`PaddedSequence`를 이용하여 RNN에 넣어봅시다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 110,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -361,15 +464,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "`PackedSequence`를 이용하여 RNN에 넣어봅시다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 111,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -388,7 +499,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# `pad_packed_sequence`\n",
     "\n",
@@ -401,8 +516,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 112,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -421,7 +540,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# `pack_padded_sequence`\n",
     "반대로, Padding이 된 Tensor인 `PaddedSequence`를 `PackedSequence`로 바꾸어주는 함수도 있습니다.\n",
@@ -435,8 +558,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 113,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -453,14 +580,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "이제 이 padding이 된 Tensor를 `PackedSequence`로 변환해보겠습니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -478,13 +609,6 @@
     "print(new_packed_sequence.data.shape)\n",
     "print(new_packed_sequence.batch_sizes)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -503,7 +627,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
